feat: Adiciona relacionamento entre Post, Imagem e Categoria